# ChatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  groupuser.hpp  user.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  offlinemodel.hpp  usermodel.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemodel.cpp  usermodel.cpp
